--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>New Year Offer</title>
 </head>
 <body>
-    <h1>New Year Party Celebration</h1>
+    <header>
+        <h1>New Year Party Celebration</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer></footer>
 </body>
 </html>
