--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>New Year Offer</title>
 </head>
 <body>
-    <header>
-        <h1>New Year Party Celebration</h1>
-    </header>
     <main>
+        <section class="banner-section maximum-width">
+            <div>
+                <h4 class="sub-title">Happy New Year</h4>
+                <h1 class="title title-one">New Year Party</h1>
+                <h1 class="title title-two">Celebration</h1>
+            </div>
+        </section>
 
+        <section class="offer-section maximum-width">
+            <h1 class="discoutn-title">65% OFF</h1>
+            <h5 class="discoutn-sub-title">OUR HOLIDAY DEALS ARE BETTER</h5>
+            <h3 class="category-text">ALL CATEGORIES</h3>
+            <img src="images/New Year Photo.png" alt="A new year image">
+        </section>
     </main>
-    <footer></footer>
 </body>
 </html>
