--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="banner-section maximum-width">
-            <div>
+            <div class="content">
                 <h4 class="sub-title">Happy New Year</h4>
                 <h1 class="title title-one">New Year Party</h1>
                 <h1 class="title title-two">Celebration</h1>
@@ -27,6 +27,17 @@
             <h5 class="discoutn-sub-title">OUR HOLIDAY DEALS ARE BETTER</h5>
             <h3 class="category-text">ALL CATEGORIES</h3>
             <img src="images/New Year Photo.png" alt="A new year image">
+        </section>
+
+        <section class="party-section maximum-width">
+            <div class="party-section-content">
+                <h1 class="party-greeting party-greeting-one">Welcom to</h1>
+                <h1 class="party-greeting party-greeting-two">midnight party</h1>
+                <p class="party-description">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                </p>
+                <button class="join-btn">JOIN NOW</button>
+            </div>
         </section>
     </main>
 </body>
