party time, date and location section styling is done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-        <section class="banner-section maximum-width">
+        <section class="banner-section">
             <div class="content">
                 <h4 class="sub-title">Happy New Year</h4>
                 <h1 class="title title-one">New Year Party</h1>
@@ -29,7 +29,7 @@
             <img src="images/New Year Photo.png" alt="A new year image">
         </section>
 
-        <section class="party-section maximum-width">
+        <section class="party-section">
             <div class="party-section-content">
                 <h1 class="party-greeting party-greeting-one">Welcom to</h1>
                 <h1 class="party-greeting party-greeting-two">midnight party</h1>
@@ -38,6 +38,16 @@
                 </p>
                 <button class="join-btn">JOIN NOW</button>
             </div>
+        </section>
+
+        <section class="date-location-section maximum-width">
+            <div class="date-location-text-content">
+                <h4 class="date-location"><span>Place:</span> New Park Hotel</h4>
+                <h4 class="date-location"><span>Date:</span> 31 December Night 2023</h4>
+                <h4 class="date-location"><span>Time:</span> Evening 7.30 pm to 12.30 am</h4>
+                <button class="date-location-join-btn">JOIN NOW</button>
+            </div>
+
         </section>
     </main>
 </body>
