comming soon section styling has been done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,29 @@
             </div>
 
         </section>
+
+        <section class="comming-soon-section">
+            <div class="comming-soon-masseg">
+                <h5>NEW BEST OFFER</h5>
+                <h3>Comming Soon</h3>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                </p>
+            </div>
+
+            <div class="rounded-image">
+                <img src="images/Ellipse 1.png" alt="People enjoying new year">
+            </div>
+
+            <div class="new-year-massage">
+                <h3>2024</h3>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+                </p>
+            
+                <img class="new-year-sticker" src="images/Group 96.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
