--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
                 <img class="new-year-sticker" src="images/Group 96.png" alt="">
             </div>
         </section>
+
+        <section class="holiday-sale-section">
+            <div class="text-section">
+                <h5>WHAT IS FUNCTIONAL</h5>
+                <h1><span class="holiday">Holidays</span> Sale 50%</h1>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                </p>
+            </div>
+
+            <div class="bottom-images">
+                <img src="images/Rectangle 2.png" alt="" class="rect">
+                <img src="images/Group 75.png" alt="" class="gift">
+                <img src="images/Group 44.png" alt="" class="discount-sticker">
+            </div>
+        </section>
+
+        <section class="portfolio-section">
+            <div class="portfolio-text">
+                <h5>THE BEST GIFT</h5>
+                <h1>Our Awesom Portfolio</h1>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                </p>
+            </div>
+            <div class="product-section">
+                <img src="images/Rectangle 3.png" alt="" class="product">
+                <img src="images/Rectangle 4.png" alt="" class="product">
+                <img src="images/Rectangle 5.png" alt="" class="product">
+                <img src="images/Rectangle 6.png" alt="" class="product">
+                <img src="images/Rectangle 7.png" alt="" class="product">
+                <img src="images/Rectangle 8.png" alt="" class="product">
+            </div>
+        </section>
     </main>
 </body>
 </html>
