all the section of main tag has been finished designing

--- a/index.html
+++ b/index.html
@@ -106,6 +106,52 @@
                 <img src="images/Rectangle 8.png" alt="" class="product">
             </div>
         </section>
+
+        <section class="newsletter-section">
+            <div class="newsletter-content">
+
+                <div class="email-icon">
+                    <img src="images/Group 61.png" alt="">
+                </div>
+                <div class="newsletter-text-section">
+                    <h1>Subscribe Newsletter</h1>
+                    <p>
+                        Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                    </p>
+                </div>
+                <div class="subscription-section">
+                    <input type="email" placeholder="user@gmail.com">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer-part-one">
+            <div class="address">
+                <p>44, Big Building Roosevelt Street</p>
+                <p>Beach Gardens Florida 33410</p>
+            </div>
+            <div class="contact">
+                <p>+00 123 584 124</p>
+                <p>www.website.com</p>
+            </div>
+        </div>
+        <hr>
+
+        <div class="footer-social-icons">
+            <img src="icons/Facebook.png" alt="" class="social-icon">
+            <img src="icons/Instagram.png" alt="" class="social-icon">
+            <img src="icons/Twitter.png" alt="" class="social-icon">
+            <img src="icons/Linkedin.png" alt="" class="social-icon">
+        </div>
+        <hr>
+
+        <div class="footer-part-two">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+        </div>
+    </footer>
 </body>
 </html>
