--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p>www.website.com</p>
             </div>
         </div>
-        <hr>
+        <hr class="hr-one">
 
         <div class="footer-social-icons">
             <img src="icons/Facebook.png" alt="" class="social-icon">
@@ -146,7 +146,7 @@
             <img src="icons/Twitter.png" alt="" class="social-icon">
             <img src="icons/Linkedin.png" alt="" class="social-icon">
         </div>
-        <hr>
+        <hr class="hr-two">
 
         <div class="footer-part-two">
             <p>2017, All Rights Reserved.</p>
